# cinemotion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Pipfile  README.md  TODO.md  replxx_history.txt
crates/cinemotion/: Cargo.toml
crates/cinemotion-proto/: Cargo.toml  build.rs
crates/cinemotion-proto/src/: lib.rs  lib_test.rs
crates/cinemotion-proto/src/defs/: cinemotion.proto
crates/cinemotion/proto/: cinemotion.proto
crates/cinemotion/src/: debug  error.rs  lib.rs  message.rs  name.rs  scene.rs  state.rs
crates/cinemotion/src/cli/: cinemotion.rs  server.rs  start.rs
crates/cinemotion/src/commands/: command.rs  connection.rs  create_session.rs  echo.rs  event.rs  mod.rs  motion.rs  open_session.rs  request.rs  response.rs  scene.rs  start_session.rs
crates/cinemotion/src/connection/: agent.rs  connection.rs  context.rs  mod.rs
crates/cinemotion/src/data/: controllers.rs  mod.rs  motion.rs  peer.rs  property.rs  sample.rs  session_desc.rs  value.rs
crates/cinemotion/src/engine/: components.rs  engine.rs  engine_opt.rs  engine_test.rs  mod.rs  network.rs  observer.rs  session.rs  state.rs
crates/cinemotion/src/engine/components/: mod.rs  network.rs  take.rs
crates/cinemotion/src/events/: connection.rs  error.rs  mod.rs  state.rs
crates/cinemotion/src/messages/: connection.rs  message.rs  mod.rs  motion.rs  payload.rs  scene.rs
crates/cinemotion/src/quic/: agent.rs  mod.rs  serialize.rs  serialize_test.rs  stream.rs  stream_test.rs
crates/cinemotion/src/services/: http.rs  mdns.rs  mod.rs  quic.rs  runtime.rs
crates/cinemotion/src/session/: agent.rs  mod.rs  session.rs
crates/cinemotion/src/webrtc/: agent.rs  connection.rs  mod.rs  session.rs  session_desc.rs  signaling.rs  signaling_test.rs
crates/cinemotion/tests/: test_command.rs  test_command_protobuf_conversions.rs   test_connection_integration.rs  test_e2e.rs  test_echo_command.rs  test_end_to_end.rs  test_motion_sampling.rs  test_protobuf_conversions.rs  test_scene_integration.rs
crates/cinemotion/tests/common/: harness.rs  mod.rs  session.rs
crates/cinemotion/tests/common/harness/: local.rs  mod.rs  step.rs
crates/cinemotion/tests/harness/: local.rs  mod.rs
crates/cinemotion/tests/playbooks/: mod.rs
crates/indiemotion-api/: Cargo.toml
crates/indiemotion-api/src/: attr.rs  client.rs  command.rs  component.rs  entity.rs  error.rs  lib.rs  message.rs  message_test.rs  metadata.rs  name.rs  object.rs  prelude.rs  property.rs  session.rs  state.rs  state_test.rs  tick.rs  timespec.rs
crates/indiemotion-api/src/models/: attribute.rs  client.rs  controller.rs  controller_test.rs  globals.rs  globals_test.rs  mod.rs  property.rs  property_test.rs  sample.rs  sample_test.rs  scene.rs  scene_test.rs  value.rs  value_test.rs
crates/indiemotion-cli/: Cargo.toml
crates/indiemotion-cli/src/: clients.rs  server.rs  sync.rs
crates/indiemotion-cli/src/cli/: indiemotion.rs  server.rs
crates/indiemotion-cli/src/cli/client/: mod.rs
crates/indiemotion-cli/src/components/: client.rs  component.rs  engine.rs  mod.rs  network.rs  websocket.rs
crates/indiemotion-cli/src/engine/: engine.rs  engine_test.rs  mod.rs  runtime.rs  service.rs
crates/indiemotion-repl/: Cargo.toml
crates/indiemotion-repl/src/: command.rs  error.rs  help.rs  lib.rs  output.rs  repl.rs
crates/quic/: Cargo.toml
crates/quic/src/: client.swift  main.rs
examples/mdns/: Cargo.toml
examples/mdns/src/: main.rs
examples/webrtc/: Cargo.toml
examples/webrtc/src/: main.rs
source/: CMakeLists.txt
source/idm/: CMakeLists.txt  main.cpp
source/idmserver/: CMakeLists.txt  main.cpp
source/indiemotion/: CMakeLists.txt
source/indiemotion-cli/: CMakeLists.txt  indiemotion-cli.cpp  repl.hpp  session_delegate.hpp
source/indiemotion-proto/: message.pb.cc  message.pb.h
source/indiemotion-proto/messages/: acknowledge.pb.cc  acknowledge.pb.h  cameras.pb.cc  cameras.pb.h  motion_mode.pb.cc  motion_mode.pb.h  motion_xform.pb.cc  motion_xform.pb.h
source/indiemotion-protobufs/: CMakeLists.txt
source/indiemotion-protobufs/include/indiemotion-protobufs/: messages.pb.cc  messages.pb.h  payload.v1.pb.cc  payload.v1.pb.h  responses.pb.cc  responses.pb.h  transports.pb.cc  transports.pb.h
source/indiemotion/include/indiemotion/: _common.hpp  application.hpp  common.hpp  context.hpp  context_manager.hpp  controller.hpp  delegates.hpp  device.hpp  errors.hpp  events.hpp  logging.hpp  messages.hpp  motion.hpp  net.hpp  options.hpp  properties.hpp  property_table.hpp  responses.hpp  scene.hpp  server.hpp  service.hpp  session.hpp  version.hpp
source/indiemotion/include/indiemotion/cameras/: camera.hpp  manager.hpp
source/indiemotion/include/indiemotion/common/: boost.hpp  info.hpp  log.hpp
source/indiemotion/include/indiemotion/context/: motion.hpp  scene.hpp  session.hpp
source/indiemotion/include/indiemotion/contexts/: context.hpp  motion_context.hpp  scene_context.hpp  session_context.hpp
source/indiemotion/include/indiemotion/delegate/: motion.hpp  scene.hpp  session.hpp
source/indiemotion/include/indiemotion/device/: device.hpp
source/indiemotion/include/indiemotion/events/: events.hpp
source/indiemotion/include/indiemotion/messages/: _factory.hpp  ack_message.hpp  acknowledge.hpp  base.hpp  cameras.hpp  curator.hpp  errors.hpp  factory.hpp  handler.hpp  handler_factory.hpp  init.hpp  init_message.hpp  kind.hpp  message.hpp  messages.hpp  protobuf.hpp
source/indiemotion/include/indiemotion/motion/: controller.hpp  manager.hpp  mode.hpp  position.hpp  session.hpp  session_delegate.hpp  status.hpp  xform.hpp
source/indiemotion/include/indiemotion/net/: acknowledge.hpp  camera.hpp  dispatch.hpp  dispatcher.hpp  error.hpp  handler.hpp  message.hpp  motion.hpp  protobuf.hpp  queue.hpp  session.hpp  translator.hpp
source/indiemotion/include/indiemotion/properties/: client.hpp  (+2 more)
source/indiemotionpb/: CMakeLists.txt  README.md  messages.proto  payloads.proto
source/indiemotionpb/include/indiemotionpb/: messages.pb.cc  messages.pb.h  payloads.pb.cc  payloads.pb.h
(+232 files in other folders)
