[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.6.0"
async-trait = "0.1.75"
bytes = "1.5"
chrono = "0.4.24"
cinemotion = { path = "crates/cinemotion" }
cinemotion-proto = { path = "crates/cinemotion-proto" }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.30"
get_if_addrs = "0.5"
hostname = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
derive_more = "0.99"
rstest = "0.18"
libmdns = "0.8"
base64 = "0.21.7"
webrtc = "0.9.0"
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
quinn = "0.10.2"
rcgen = "0.12.0"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
