[package]
name = "cinemotion-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
