[package]
name = "cinemotion"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cinemotion"
path = "src/cli/cinemotion.rs"

[lib]
path = "src/lib.rs"


[dependencies]
arc-swap.workspace = true
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
cinemotion-proto.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_more.workspace = true
libmdns.workspace = true
async-trait.workspace = true
futures.workspace = true
warp.workspace = true
serde.workspace = true
webrtc.workspace = true
base64.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
hostname.workspace = true
get_if_addrs.workspace = true

[dev-dependencies]
paste = "1.0"
pretty_assertions_sorted = "1.2"
tracing-test = "0.2.4"

[build-dependencies]
prost-build = "0.12"
