[package]
name = "indiemotion-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde = "1.0.162"
serde_derive = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
async-trait = "0.1.66"

[dev-dependencies]
rstest = "0.17.0"
