[package]
name = "indiemotion-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde = "1.0.162"
serde_derive = "1.0.160"
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.37"
async-trait = "0.1.66"
derive_more = "0.99.17"

[dev-dependencies]
rstest = "0.17.0"
