[package]
name = "indiemotion"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "indiemotion"
path = "src/cli/indiemotion.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
indiemotion-api.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
warp.workspace = true
hostname.workspace = true
derive_more.workspace = true
libmdns.workspace = true