[package]
name = "indiemotion-repl"
version = "0.1.0"
authors = ["Andrew Paxson <paxsonsa@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
rustyline = "8.2.0"
yansi = "0.5.0"
nix = "0.21.0"
clap = "2.33.1"
regex = "1.7.3"
rustyline-derive = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }