[package]
name = "indiemotion-repl"
version = "0.1.0"
authors = ["Andrew Paxson <paxsonsa@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
rustyline = "11.0.0"
yansi = "0.5.0"
nix = "0.26.2"
clap = "2.33.1"
regex = "1.7.3"
rustyline-derive = "0.4.0"
tokio = { version = "1.24.2", features = ["full"] }