[package]
name = "webrtc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
clap = "4.4.11"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
webrtc = "0.9.0"
